mouse party progress 1st commit

--- a/vanilla-mouse-party/index.html
+++ b/vanilla-mouse-party/index.html
@@ -58,6 +58,29 @@
 </body>
 
 <script>
+let mousePosition = {
+    x: 0,
+    y: 0
+};
+
+let drawId;
+
+function getRandomNumber(min, max){
+    return Math.round(Math.random() * (max - min + 1)) + min;
+};
+
+window.addEventListener("mousemove", function(mouseMoveEvent){
+
+    mousePosition.x = mouseMoveEvent.pageX
+    mousePosition.y = mouseMoveEvent.pageY
+
+    console.log(mousePosition.x, mousePosition.y)
+})
+
+let draw = function(){
+    return setInterval
+}
+
 
 </script>
 
