it was working the whole time

--- a/vanilla-piano/index.html
+++ b/vanilla-piano/index.html
@@ -176,6 +176,7 @@ window.addEventListener("keypress", function(keyPressEvent) {
     pianoKey.classList.remove("pressed");
   }, 300);
 });
+// It was working all along... you just thought it was supposed to be clicked :0)
 </script>
 
 </html>
