--- a/vanilla-typeahead/index.html
+++ b/vanilla-typeahead/index.html
@@ -88,7 +88,7 @@
     let list = document.getElementById('list');
     const search = document.querySelector('input');
 
-    fetch('https://www.swapi.co/api/people')
+    fetch('https://swapi.dev/api/people')
     .then(response => response.json())
     .then(response => characters.push(...response.results))
 
